# effqpdet

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  compile_build.sh  config.yaml  config_win_detector.yaml  const.h  functions.sh  main.cpp  utils.h
Google_tests/: CMakeLists.txt  EmptyTest.cpp
QuadcopterPropellerDetector_lib/: CMakeLists.txt  Detector.cpp  Detector.h  TensorBoardLogger.cpp  TensorBoardLogger.h  types.h  utils.h
